force-app/main/default/objects/SBQQ__ProductOption__c/fields/Horas_do_Pai__c.field-meta.xml
<CustomField>
    <fullName>Horas_do_Pai__c</fullName>
    <description>Recebe as Horas do Pai do Bundle</description>
    <formula>SBQQ__ConfiguredSKU__r.Horas_Padrao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas do Pai</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>