force-app/main/default/objects/SBQQ__ProductOption__c/fields/Horas_do_Produto__c.field-meta.xml
<CustomField>
    <fullName>Horas_do_Produto__c</fullName>
    <label>Horas do Produto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>