force-app/main/default/objects/SBQQ__ProductOption__c/fields/Horas_Opcionais__c.field-meta.xml
<CustomField>
    <fullName>Horas_Opcionais__c</fullName>
    <description>Horas Padrao dos Opcionais a serem incluidos ou nao em um projeto</description>
    <label>Horas Opcionais</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>