force-app/main/default/objects/SBQQ__ProductOption__c/fields/Lead_x_quantity__c.field-meta.xml
<CustomField>
    <fullName>Lead_x_quantity__c</fullName>
    <label>Lead-x-quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>