force-app/main/default/objects/SBQQ__ProductOption__c/fields/Max_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Max_Lead_Time__c</fullName>
    <label>Max Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>