force-app/main/default/objects/SBQQ__ProductOption__c/fields/Parent_Product_Formula__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Formula__c</fullName>
    <label>Parent Product Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>