force-app/main/default/objects/SBQQ__ProductOption__c/fields/Percentual_de_HH__c.field-meta.xml
<CustomField>
    <fullName>Percentual_de_HH__c</fullName>
    <description>Percentual definido para cada Recurso, o mix tem que ser 100%</description>
    <label>Percentual de HH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>