force-app/main/default/objects/SBQQ__ProductOption__c/fields/Voltage_Range__c.field-meta.xml
<CustomField>
    <fullName>Voltage_Range__c</fullName>
    <label>Voltage Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2.4 - 4.8</fullName>
            </value>
            <value>
                <fullName>6.0 - 8.4</fullName>
            </value>
            <value>
                <fullName>10.0 - 13.8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>